tests/ui/resolve/issue-22692.stderr
error[E0423]: expected value, found type alias `String`
  --> $DIR/issue-22692.rs:2:13
   |
LL |     let _ = String.new();
   |             ^^^^^^
   |
   = note: can't use a type alias as a constructor

error[E0423]: expected value, found type alias `String`
  --> $DIR/issue-22692.rs:5:13
   |
LL |     let _ = String.default;
   |             ^^^^^^
   |
   = note: can't use a type alias as a constructor

error[E0423]: expected value, found struct `Vec`
  --> $DIR/issue-22692.rs:8:13
   |
LL |     let _ = Vec::<()>.with_capacity(1);
   |             ^^^^^^^^^- help: use the path separator to refer to an item: `::`

error[E0423]: expected value, found struct `std::cell::Cell`
  --> $DIR/issue-22692.rs:15:9
   |
LL |         ::std::cell::Cell
   |         ^^^^^^^^^^^^^^^^^
...
LL |     Type!().get();
   |     ------- in this macro invocation
   |
   = note: this error originates in the macro `Type` (in Nightly builds, run with -Z macro-backtrace for more info)
help: use the path separator to refer to an item
   |
LL |     <Type!()>::get();
   |     ~~~~~~~~~~~

error[E0423]: expected value, found struct `std::cell::Cell`
  --> $DIR/issue-22692.rs:15:9
   |
LL |         ::std::cell::Cell
   |         ^^^^^^^^^^^^^^^^^
...
LL |     Type! {}.get;
   |     -------- in this macro invocation
   |
   = note: this error originates in the macro `Type` (in Nightly builds, run with -Z macro-backtrace for more info)
help: use the path separator to refer to an item
   |
LL |     <Type! {}>::get;
   |     ~~~~~~~~~~~~

error[E0423]: expected value, found struct `Vec`
  --> $DIR/issue-22692.rs:24:9
   |
LL |         Vec.new()
   |         ^^^- help: use the path separator to refer to an item: `::`
...
LL |     let _ = create!(type method);
   |             -------------------- in this macro invocation
   |
   = note: this error originates in the macro `create` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0423]: expected value, found struct `Vec`
  --> $DIR/issue-22692.rs:29:9
   |
LL |         Vec.new
   |         ^^^- help: use the path separator to refer to an item: `::`
...
LL |     let _ = create!(type field);
   |             ------------------- in this macro invocation
   |
   = note: this error originates in the macro `create` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0423]: expected value, found struct `std::cell::Cell`
  --> $DIR/issue-22692.rs:15:9
   |
LL |         ::std::cell::Cell
   |         ^^^^^^^^^^^^^^^^^
...
LL |     let _ = create!(macro method);
   |             --------------------- in this macro invocation
   |
   = note: this error originates in the macro `Type` which comes from the expansion of the macro `create` (in Nightly builds, run with -Z macro-backtrace for more info)
help: use the path separator to refer to an item
   |
LL |         <Type!()>::new(0)
   |         ~~~~~~~~~~~

error: aborting due to 8 previous errors

For more information about this error, try `rustc --explain E0423`.
